welcome.lessons.welcome.methods.basics.Methods.scala.error
Methods:2: error: not found: value compteurpas
  compteurpas = 0
  ^Methods:5: error: not found: value compteurpas
   compteurpas = compteurpas + 1
   ^Methods:9: error: not found: value compteurpas
  for (compteur <- 1 to compteurpas) {
                        ^